// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FadeTranform can accept custom styles 1`] = `
<div
  style={
    Object {
      "background": "black",
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "linear",
    }
  }
>
  <div
    style={
      Object {
        "background": "black",
        "transform": "none",
        "transitionDelay": null,
        "transitionDuration": "500ms",
        "transitionProperty": "transform",
        "transitionTimingFunction": "linear",
      }
    }
  />
</div>
`;

exports[`FadeTranform renders 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "linear",
    }
  }
>
  <div
    style={
      Object {
        "transform": "none",
        "transitionDelay": null,
        "transitionDuration": "500ms",
        "transitionProperty": "transform",
        "transitionTimingFunction": "linear",
      }
    }
  />
</div>
`;

exports[`FadeTranform sets finish 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "linear",
    }
  }
>
  <div
    style={
      Object {
        "transform": "none",
        "transitionDelay": null,
        "transitionDuration": "500ms",
        "transitionProperty": "transform",
        "transitionTimingFunction": "linear",
      }
    }
  />
</div>
`;

exports[`FadeTranform sets start 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "linear",
    }
  }
>
  <div
    style={
      Object {
        "transform": "translateX(10em)",
        "transitionDelay": null,
        "transitionDuration": "500ms",
        "transitionProperty": "transform",
        "transitionTimingFunction": "linear",
      }
    }
  />
</div>
`;

exports[`FadeTranform sets transitionDelay with delay prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": "1s",
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "linear",
    }
  }
>
  <div
    style={
      Object {
        "transform": "none",
        "transitionDelay": "1s",
        "transitionDuration": "500ms",
        "transitionProperty": "transform",
        "transitionTimingFunction": "linear",
      }
    }
  />
</div>
`;

exports[`FadeTranform sets transitionDuration with duration prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "1s",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "linear",
    }
  }
>
  <div
    style={
      Object {
        "transform": "none",
        "transitionDelay": null,
        "transitionDuration": "1s",
        "transitionProperty": "transform",
        "transitionTimingFunction": "linear",
      }
    }
  />
</div>
`;

exports[`FadeTranform sets transitionTimingFunction with timingFn prop 1`] = `
<div
  style={
    Object {
      "opacity": 0,
      "transitionDelay": null,
      "transitionDuration": "500ms",
      "transitionProperty": "opacity",
      "transitionTimingFunction": "ease-in-out",
    }
  }
>
  <div
    style={
      Object {
        "transform": "none",
        "transitionDelay": null,
        "transitionDuration": "500ms",
        "transitionProperty": "transform",
        "transitionTimingFunction": "ease-in-out",
      }
    }
  />
</div>
`;
